Remove services section and facility showcase image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             </div>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#services" class="nav-link">Services</a></li>
                 <li><a href="#instructions" class="nav-link">Instructions</a></li>
                 <li><a href="#pricing" class="nav-link">Pricing</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -103,7 +102,7 @@
                 <div class="instructions-sidebar">
                     <div class="info-box pricing-box">
                         <h3>💰 Token Pricing</h3>
-                        <p class="token-info"><strong>Each token = $1 = 2 minutes</strong></p>
+                        <p class="token-info"><strong>Each token = $1</strong></p>
                         <ul class="pricing-list">
                             <li>$8 (6 tokens) = 6 minutes</li>
                             <li>$9 (7 tokens) = 8 minutes</li>
@@ -178,75 +177,6 @@
                     <div class="highlight-icon">🛒</div>
                     <h3>Fully Stocked Vending</h3>
                     <p>Multiple vending machines with <strong>Little Trees air fresheners</strong>, <strong>premium microfiber towels</strong>, and <strong>high-quality cleaning products</strong>. Everything you need, right here!</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section class="services" id="services">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Our Services</h2>
-            </div>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon">🚗</div>
-                    <h3>Self-Serve Bays</h3>
-                    <p>4 Modern Self-Serve Bays - Fits Vehicles up to 9'4" Tall</p>
-                    <ul class="service-details">
-                        <li><strong>Separate Foam Brush</strong> - Deep cleaning action</li>
-                        <li><strong>High-Pressure Washing Gun</strong> - Professional power</li>
-                        <li>Premium Cleaning Soaps</li>
-                        <li>Quality Wax & Polish</li>
-                        <li>Spot-Free Rinse System</li>
-                        <li>Tire & Wheel Cleaner</li>
-                    </ul>
-                    <p class="service-price">$3.00 for 4 minutes</p>
-                    <p class="special-note">⭐ Professional equipment for excellent results!</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">✨</div>
-                    <h3>Automatic Touch-Free Wash</h3>
-                    <p>Accommodates vehicles up to 9'4" tall</p>
-                    <ul class="service-details">
-                        <li>Touch-Free Technology</li>
-                        <li>Tri-Color Foam Application</li>
-                        <li>Salt & Sand Removal</li>
-                        <li>Underbody Wash System</li>
-                        <li>Spot-Free Rinse</li>
-                        <li>High-Pressure Dry</li>
-                    </ul>
-                    <p class="service-price">Starting at $8</p>
-                    <p class="special-note">🚙 Great for trucks & SUVs!</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">🛒</div>
-                    <h3>Vending & Supplies</h3>
-                    <p>Premium products available on-site</p>
-                    <ul class="service-details">
-                        <li><strong>High-Quality Cleaning Products</strong></li>
-                        <li>Little Trees Air Fresheners</li>
-                        <li>Microfiber Cleaning Towels</li>
-                        <li>Detailing Supplies</li>
-                        <li>Multiple Vending Machines</li>
-                        <li><strong>FREE Vacuum Stations</strong></li>
-                    </ul>
-                    <p class="service-price">Conveniently stocked</p>
-                    <p class="special-note">🧼 Everything you need!</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Facility Showcase -->
-    <section class="facility-showcase">
-        <div class="container">
-            <div class="showcase-image">
-                <img src="images/IMG_4043.jpeg" alt="Our Self-Serve Car Wash Facility" loading="lazy">
-                <div class="showcase-badge">
-                    <span class="badge-icon">💧</span>
-                    <span>Modern Self-Serve Facility</span>
                 </div>
             </div>
         </div>
@@ -383,7 +313,7 @@
                     <h3>Token System</h3>
                     <p><strong>Self-Serve Bays:</strong><br>
                     Token-Based System<br>
-                    $1 = 1 Token = 2 Minutes<br>
+                    $1 = 1 Token<br>
                     Minimum: 6 Tokens ($8)</p>
                     <p style="margin-top: 1rem; font-size: 0.9rem; color: #64748b;">💵 Cash Accepted</p>
                 </div>
@@ -406,18 +336,9 @@
                     <h4>Quick Links</h4>
                     <ul>
                         <li><a href="#home">Home</a></li>
-                        <li><a href="#services">Services</a></li>
+                        <li><a href="#instructions">Instructions</a></li>
                         <li><a href="#pricing">Pricing</a></li>
                         <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Services</h4>
-                    <ul>
-                        <li><a href="#services">Self-Serve Wash</a></li>
-                        <li><a href="#services">Automatic Wash</a></li>
-                        <li><a href="#services">Vacuum Stations</a></li>
-                        <li><a href="#pricing">Monthly Pass</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
