Update pricing section to show only token-based system for self-serve bays and vending machines

--- a/index.html
+++ b/index.html
@@ -224,59 +224,43 @@
     <section class="pricing" id="pricing">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Simple Pricing</h2>
+                <h2 class="section-title">Token-Based Pricing</h2>
+                <p class="section-subtitle">Simple and affordable - pay with tokens only</p>
             </div>
             <div class="pricing-grid">
-                <div class="pricing-card">
-                    <h3>Self-Serve Bay</h3>
-                    <div class="price">
-                        <span class="amount">$3.00</span>
-                    </div>
-                    <p class="price-detail">4 minutes of wash time • Up to 9'4" tall</p>
-                    <ul class="pricing-features">
-                        <li>✓ <strong>Separate Foam Brush</strong> - Deep cleaning</li>
-                        <li>✓ <strong>Power Washing Gun</strong> - High pressure</li>
-                        <li>✓ <strong>Premium Cleaning Soaps</strong></li>
-                        <li>✓ <strong>Quality Waxes</strong> - Protection & shine</li>
-                        <li>✓ Spot-Free Rinse System</li>
-                        <li>✓ Tire & Wheel Cleaner</li>
-                    </ul>
-                    <p class="payment-note">💳 Accepts Credit Cards & Cash</p>
-                </div>
                 <div class="pricing-card featured">
-                    <div class="popular-badge">Touch-Free</div>
-                    <h3>Automatic Wash</h3>
+                    <div class="popular-badge">Self-Serve Bays</div>
+                    <h3>Token System</h3>
                     <div class="price">
-                        <span class="amount">$8-$12</span>
+                        <span class="amount">$1 = 1 Token</span>
                     </div>
-                    <p class="price-detail">Fits vehicles up to 9'4" tall</p>
+                    <p class="price-detail">Each token = 2 minutes • Minimum 6 tokens ($8)</p>
                     <ul class="pricing-features">
-                        <li>✓ Touch-Free Technology</li>
-                        <li>✓ Tri-Color Foam Application</li>
-                        <li>✓ <strong>Deep Cleaning Power</strong></li>
-                        <li>✓ Underbody Wash System</li>
-                        <li>✓ Wheel & Tire Cleaning</li>
-                        <li>✓ Spot-Free Rinse</li>
-                        <li>✓ High-Speed Dry</li>
-                        <li>✓ <strong>FREE Vacuum Included</strong></li>
+                        <li>✓ <strong>$8 (6 tokens) = 6 minutes</strong></li>
+                        <li>✓ <strong>$9 (7 tokens) = 8 minutes</strong></li>
+                        <li>✓ <strong>$10 (8 tokens) = 10 minutes</strong></li>
+                        <li>✓ <strong>$11 (9 tokens) = 12 minutes</strong></li>
+                        <li>✓ <strong>$12 (10 tokens) = 14 minutes</strong></li>
+                        <li>✓ <strong>$13 (11 tokens) = 16 minutes</strong></li>
                     </ul>
-                    <p class="payment-note">💳 Card Payment Only</p>
+                    <p class="payment-note">💵 Cash Only - Tokens Required</p>
+                    <p class="payment-note" style="margin-top: 0.5rem;">⚠️ If machine shuts off, requires 6 tokens to restart</p>
                 </div>
                 <div class="pricing-card">
-                    <h3>Vending Products</h3>
+                    <h3>Vending Machines</h3>
                     <div class="price">
-                        <span class="amount">On-Site</span>
+                        <span class="amount">Token-Based</span>
                     </div>
-                    <p class="price-detail">Everything you need available</p>
+                    <p class="price-detail">Premium products available on-site</p>
                     <ul class="pricing-features">
-                        <li>✓ <strong>High-Quality Cleaning Products</strong></li>
                         <li>✓ <strong>Little Trees Air Fresheners</strong></li>
                         <li>✓ <strong>Microfiber Cleaning Towels</strong></li>
+                        <li>✓ <strong>High-Quality Cleaning Products</strong></li>
                         <li>✓ Professional Detailing Supplies</li>
                         <li>✓ Multiple Vending Machines</li>
-                        <li>✓ <strong>FREE Vacuum Stations</strong></li>
+                        <li>✓ <strong>Fully Stocked Daily</strong></li>
                     </ul>
-                    <p class="payment-note">🛒 Fully Stocked Daily</p>
+                    <p class="payment-note">🪙 Tokens Only - No Cash/Cards</p>
                 </div>
             </div>
         </div>
