Remove Special Features section and add Why Us to navigation linking to Features section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#instructions" class="nav-link">Instructions</a></li>
+                <li><a href="#why-us" class="nav-link">Why Us</a></li>
                 <li><a href="#pricing" class="nav-link">Pricing</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -146,44 +147,8 @@
         </div>
     </section>
 
-    <!-- Special Features Highlight -->
-    <section class="special-features">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Why Choose Bubble Brush?</h2>
-            </div>
-            <div class="highlight-grid">
-                <div class="highlight-card">
-                    <div class="highlight-icon">🔒</div>
-                    <h3>24/7 Security Monitored</h3>
-                    <p>Your safety is our priority. Our facility is under <strong>constant security camera surveillance</strong> day and night. Wash with confidence knowing you're protected.</p>
-                </div>
-                <div class="highlight-card">
-                    <div class="highlight-icon">💡</div>
-                    <h3>Exceptionally Well-Lit</h3>
-                    <p>Don't let darkness stop you! Our facility features <strong>premium lighting throughout</strong>, making night washes as safe and easy as daytime.</p>
-                </div>
-                <div class="highlight-card">
-                    <div class="highlight-icon">🚛</div>
-                    <h3>Big Vehicle Friendly</h3>
-                    <p>Accommodates vehicles <strong>up to 9'4" tall</strong>! Perfect for lifted trucks, large SUVs, vans, and commercial vehicles of all types.</p>
-                </div>
-                <div class="highlight-card">
-                    <div class="highlight-icon">🔧</div>
-                    <h3>Separate Foam Brush & Power Gun</h3>
-                    <p>Unlike other washes, we provide <strong>both a foam brush for gentle cleaning</strong> AND a <strong>separate high-pressure washing gun</strong> for maximum cleaning power.</p>
-                </div>
-                <div class="highlight-card">
-                    <div class="highlight-icon">🛒</div>
-                    <h3>Fully Stocked Vending</h3>
-                    <p>Multiple vending machines with <strong>Little Trees air fresheners</strong>, <strong>premium microfiber towels</strong>, and <strong>high-quality cleaning products</strong>. Everything you need, right here!</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Features Section -->
-    <section class="features">
+    <section class="features" id="why-us">
         <div class="container">
             <div class="features-grid">
                 <div class="feature-box">
@@ -321,6 +286,7 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#instructions">Instructions</a></li>
+                        <li><a href="#why-us">Why Us</a></li>
                         <li><a href="#pricing">Pricing</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
