Upgrade navigation with premium styling and transform Why Us section with stunning animations and effects

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">Why Choose Bubble Brush?</h2>
+                <p class="section-subtitle">Experience the difference with our premium facilities and exceptional service</p>
             </div>
             <div class="highlight-grid">
                 <div class="highlight-card">
