Complete rebuild of Why Us section with premium cards, detailed info, feature tags, glowing icons, and CTA

--- a/index.html
+++ b/index.html
@@ -148,38 +148,115 @@
     </section>
 
     <!-- Why Choose Us Section -->
-    <section class="special-features" id="why-us">
+    <section class="why-us-section" id="why-us">
         <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Why Choose Bubble Brush?</h2>
-                <p class="section-subtitle">Experience the difference with our premium facilities and exceptional service</p>
+            <div class="why-us-header">
+                <span class="why-us-badge">⭐ PREMIUM CAR WASH FACILITY</span>
+                <h2 class="why-us-title">Why Bubble Brush Stands Out</h2>
+                <p class="why-us-subtitle">More than just a car wash - we're your vehicle care destination in Deer Park, NY</p>
             </div>
-            <div class="highlight-grid">
-                <div class="highlight-card">
-                    <div class="highlight-icon">🔒</div>
-                    <h3>24/7 Security Monitored</h3>
-                    <p>Your safety is our priority. Our facility is under <strong>constant security camera surveillance</strong> day and night. Wash with confidence knowing you're protected.</p>
+            
+            <div class="why-us-grid">
+                <!-- Security Card -->
+                <div class="why-card security-card">
+                    <div class="why-card-icon-wrapper">
+                        <div class="why-card-icon">🔒</div>
+                        <div class="icon-glow security-glow"></div>
+                    </div>
+                    <div class="why-card-content">
+                        <h3>24/7 Security Surveillance</h3>
+                        <p>Wash with <strong>complete peace of mind</strong>. Our facility is monitored by <strong>security cameras 24 hours a day</strong>, providing constant protection for you and your vehicle at any time.</p>
+                        <div class="feature-tags">
+                            <span class="tag">🎥 Live Monitoring</span>
+                            <span class="tag">🛡️ Safe & Protected</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="highlight-card">
-                    <div class="highlight-icon"></div>
-                    <h3>Exceptionally Well-Lit</h3>
-                    <p>Don't let darkness stop you! Our facility features <strong>premium lighting throughout</strong>, making night washes as safe and easy as daytime.</p>
+                <!-- Lighting Card -->
+                <div class="why-card lighting-card">
+                    <div class="why-card-icon-wrapper">
+                        <div class="why-card-icon">💡</div>
+                        <div class="icon-glow lighting-glow"></div>
+                    </div>
+                    <div class="why-card-content">
+                        <h3>Professional LED Lighting</h3>
+                        <p>Never worry about night washes again! Our <strong>state-of-the-art LED lighting system</strong> illuminates every bay, making evening and night-time washes as convenient and safe as midday.</p>
+                        <div class="feature-tags">
+                            <span class="tag">🌙 Night-Ready</span>
+                            <span class="tag">✨ Full Visibility</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="highlight-card">
-                    <div class="highlight-icon">🚛</div>
-                    <h3>Big Vehicle Friendly</h3>
-                    <p>Accommodates vehicles <strong>up to 9'4" tall</strong>! Perfect for lifted trucks, large SUVs, vans, and commercial vehicles of all types.</p>
+                <!-- Vehicle Size Card -->
+                <div class="why-card vehicle-card">
+                    <div class="why-card-icon-wrapper">
+                        <div class="why-card-icon">🚛</div>
+                        <div class="icon-glow vehicle-glow"></div>
+                    </div>
+                    <div class="why-card-content">
+                        <h3>9'4" Height Clearance</h3>
+                        <p>Drive in with confidence! Our <strong>oversized bays accommodate vehicles up to 9 feet 4 inches tall</strong> - perfect for lifted trucks, large SUVs, vans, commercial vehicles, and even plow trucks.</p>
+                        <div class="feature-tags">
+                            <span class="tag">🚙 Trucks Welcome</span>
+                            <span class="tag">📏 Extra Tall Bays</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="highlight-card">
-                    <div class="highlight-icon">🔧</div>
-                    <h3>Separate Foam Brush & Power Gun</h3>
-                    <p>Unlike other washes, we provide <strong>both a foam brush for gentle cleaning</strong> AND a <strong>separate high-pressure washing gun</strong> for maximum cleaning power.</p>
+                <!-- Equipment Card -->
+                <div class="why-card equipment-card">
+                    <div class="why-card-icon-wrapper">
+                        <div class="why-card-icon">🔧</div>
+                        <div class="icon-glow equipment-glow"></div>
+                    </div>
+                    <div class="why-card-content">
+                        <h3>Dual-Action Cleaning System</h3>
+                        <p>Get professional results with our <strong>exclusive separate foam brush AND high-pressure power gun</strong>. The foam brush gently scrubs while the power gun blasts away stubborn dirt - a winning combination!</p>
+                        <div class="feature-tags">
+                            <span class="tag">🧽 Foam Brush</span>
+                            <span class="tag">💨 Power Gun</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="highlight-card">
-                    <div class="highlight-icon">🛒</div>
-                    <h3>Fully Stocked Vending</h3>
-                    <p>Multiple vending machines with <strong>Little Trees air fresheners</strong>, <strong>premium microfiber towels</strong>, and <strong>high-quality cleaning products</strong>. Everything you need, right here!</p>
+                <!-- Simoniz Card -->
+                <div class="why-card products-card">
+                    <div class="why-card-icon-wrapper">
+                        <div class="why-card-icon">🧴</div>
+                        <div class="icon-glow products-glow"></div>
+                    </div>
+                    <div class="why-card-content">
+                        <h3>Professional Simoniz Products</h3>
+                        <p><strong>All soaps and waxes made by Simoniz</strong> - the industry leader in car care since 1910. Premium cleaning soaps, protective waxes, and spot-free rinse for that showroom shine.</p>
+                        <div class="feature-tags">
+                            <span class="tag">✨ Premium Quality</span>
+                            <span class="tag">🏆 Trusted Brand</span>
+                        </div>
+                    </div>
                 </div>
+
+                <!-- Vending Card -->
+                <div class="why-card vending-card">
+                    <div class="why-card-icon-wrapper">
+                        <div class="why-card-icon">🛒</div>
+                        <div class="icon-glow vending-glow"></div>
+                    </div>
+                    <div class="why-card-content">
+                        <h3>Fully-Stocked Convenience</h3>
+                        <p>Everything you need, right on site! <strong>Multiple vending machines</strong> offer Little Trees air fresheners, premium microfiber towels, cleaning supplies, and detailing products. <strong>Never drive away unprepared!</strong></p>
+                        <div class="feature-tags">
+                            <span class="tag">🌲 Air Fresheners</span>
+                            <span class="tag">🧽 Towels & More</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Bottom CTA -->
+            <div class="why-us-cta">
+                <div class="cta-content">
+                    <h3>Experience The Bubble Brush Difference</h3>
+                    <p>Open 24/7 at 6 Lincoln Ave, Deer Park, NY • Call us: 631-539-7405</p>
+                </div>
+                <a href="#contact" class="cta-button">Visit Us Today</a>
             </div>
         </div>
     </section>
