Significantly increase spacing between steps and restore large full-width facility image

--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
                         <p><strong>USE AT YOUR OWN RISK</strong></p>
                         <p>Management assumes no responsibility for damages or injuries</p>
                     </div>
-
-                    <!-- Facility Image in Sidebar -->
-                    <div class="info-box facility-box">
-                        <img src="images/entrance.jpg" alt="Bubble Brush Car Wash Entrance" class="sidebar-facility-image">
-                    </div>
                 </div>
+            </div>
+
+            <!-- Facility Image Showcase -->
+            <div class="facility-image-container">
+                <img src="images/entrance.jpg" alt="Bubble Brush Car Wash Entrance" class="facility-entrance-image">
             </div>
 
             <div class="add-time-notice">
