Update index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                         <span class="logo-bubble">💧</span>
                         <span class="logo-text">Bubble Brush</span>
                     </div>
-                    <p>Modern self-serve car wash with touch-free automatic bay. Quality equipment, eco-friendly products, and exceptional results - open 24/7 for your convenience.</p>
+                    <p>Bubble Brush Car Wash - Quality equipment, eco-friendly products, and exceptional results - open 24/7 for your convenience.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Quick Links</h4>
