Implement red, white, black color scheme, add brush rinse rule, move time notice to pricing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bubble Brush Car Wash - Premium Car Care Services</title>
+    <title>Bubble Brush Self-Serve Car Wash - Premium Self-Serve Car Wash</title>
     <meta name="description" content="Professional car wash services with eco-friendly products. Get your car sparkling clean at Bubble Brush Car Wash.">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -75,7 +75,7 @@
                         <span class="step-number">1</span>
                         <div class="step-content">
                             <h3>Deposit Tokens</h3>
-                            <p><strong>Deposit 6 tokens or more to start</strong> (minimum $8 = 6 tokens = 6 minutes)</p>
+                            <p><strong>Deposit 8 tokens or more to start</strong> (minimum $8 = 8 tokens = 6 minutes)</p>
                         </div>
                     </div>
                     <div class="instruction-step">
@@ -113,20 +113,25 @@
                         <h3>💰 Token Pricing</h3>
                         <p class="token-info"><strong>Each token = $1</strong></p>
                         <ul class="pricing-list">
-                            <li>$8 (6 tokens) = 6 minutes</li>
-                            <li>$9 (7 tokens) = 8 minutes</li>
-                            <li>$10 (8 tokens) = 10 minutes</li>
-                            <li>$11 (9 tokens) = 12 minutes</li>
-                            <li>$12 (10 tokens) = 14 minutes</li>
-                            <li>$13 (11 tokens) = 16 minutes</li>
+                            <li>$8 = 6 minutes</li>
+                            <li>$9 = 8 minutes</li>
+                            <li>$10 = 10 minutes</li>
+                            <li>$11 = 12 minutes</li>
+                            <li>$12 = 14 minutes</li>
+                            <li>$13 = 16 minutes</li>
                         </ul>
-                        <p class="minimum-note"><strong>Minimum: 6 tokens ($8)</strong></p>
+                        <p class="minimum-note"><strong>Minimum: $8</strong></p>
                         <p class="restart-note">If machine shuts off, it requires 6 tokens to restart</p>
+                        <div class="add-time-info">
+                            <strong>⏱️ Need More Time?</strong>
+                            <p>When beep goes off, add additional tokens. Each token gives you 2 more minutes.</p>
+                        </div>
                     </div>
 
                     <div class="info-box warning-box">
                         <h3>⚠️ Important Rules</h3>
                         <ul class="rules-list">
+                            <li><strong>RINSE BRUSH FIRST</strong> in case of sand/dirt from previous user</li>
                             <li><strong>DO NOT</strong> use brush on dry surfaces, engines, or grease-covered areas</li>
                             <li>Remove all abrasive materials from brush</li>
                             <li><strong>TRUCK OWNERS:</strong> Sweep debris into garbage before hosing bed</li>
@@ -151,11 +156,6 @@
             <!-- Facility Image Showcase -->
             <div class="facility-image-container">
                 <img src="images/entrance.jpg" alt="Bubble Brush Car Wash Entrance" class="facility-entrance-image">
-            </div>
-
-            <div class="add-time-notice">
-                <h3>⏱️ Need More Time?</h3>
-                <p>When beep goes off, add additional tokens. Each token gives you 2 more minutes.</p>
             </div>
         </div>
     </section>
@@ -288,16 +288,16 @@
                     <div class="price">
                         <span class="amount">$1 = 1 Token</span>
                     </div>
-                    <p class="price-detail">Each token = 2 minutes • Minimum 6 tokens ($8)</p>
+                    <p class="price-detail">Minimum $8</p>
                     <ul class="pricing-features">
-                        <li>✓ <strong>$8 (6 tokens) = 6 minutes</strong></li>
-                        <li>✓ <strong>$9 (7 tokens) = 8 minutes</strong></li>
-                        <li>✓ <strong>$10 (8 tokens) = 10 minutes</strong></li>
-                        <li>✓ <strong>$11 (9 tokens) = 12 minutes</strong></li>
-                        <li>✓ <strong>$12 (10 tokens) = 14 minutes</strong></li>
-                        <li>✓ <strong>$13 (11 tokens) = 16 minutes</strong></li>
+                        <li>✓ <strong>$8 = 6 minutes</strong></li>
+                        <li>✓ <strong>$9 = 8 minutes</strong></li>
+                        <li>✓ <strong>$10 = 10 minutes</strong></li>
+                        <li>✓ <strong>$11 = 12 minutes</strong></li>
+                        <li>✓ <strong>$12 = 14 minutes</strong></li>
+                        <li>✓ <strong>$13 = 16 minutes</strong></li>
                     </ul>
-                    <p class="payment-note">💵 Cash Only - Tokens Required</p>
+                    <p class="payment-note">Tokens only! No cash or card</p>
                     <p class="payment-note" style="margin-top: 0.5rem;">⚠️ If machine shuts off, requires 6 tokens to restart</p>
                 </div>
                 <div class="pricing-card">
@@ -353,7 +353,7 @@
                     Token-Based System<br>
                     $1 = 1 Token<br>
                     Minimum: 6 Tokens ($8)</p>
-                    <p style="margin-top: 1rem; font-size: 0.9rem; color: #64748b;">💵 Cash Accepted</p>
+                    <p style="margin-top: 1rem; font-size: 0.9rem; color: #64748b;"></p>
                 </div>
             </div>
         </div>
