Add Products section, update to 8 tokens, add corner of Bay Shore Rd to addresses, add Cash Only banner

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#instructions" class="nav-link">Instructions</a></li>
+                <li><a href="#products" class="nav-link">Products</a></li>
                 <li><a href="#why-us" class="nav-link">Why Us</a></li>
                 <li><a href="#pricing" class="nav-link">Pricing</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -48,7 +49,7 @@
                 <div class="hero-contact-info">
                     <div class="hero-contact-item">
                         <span class="contact-icon">📍</span>
-                        <span>6 Lincoln Ave, Deer Park, NY 11729</span>
+                        <span>6 Lincoln Ave (corner of Bay Shore Rd), Deer Park, NY 11729</span>
                     </div>
                     <div class="hero-contact-item">
                         <span class="contact-icon">📞</span>
@@ -89,8 +90,8 @@
                     <div class="instruction-step">
                         <span class="step-number">3</span>
                         <div class="step-content">
-                            <h3>SUDS N' BRUSH - Scrub</h3>
-                            <p>Turn dial to <strong>SUDS N' BRUSH</strong>, then brush car generously with soap.</p>
+                            <h3>SUDS N' BRUSH / FOAM BRUSH - Scrub</h3>
+                            <p>Turn dial to <strong>SUDS N' BRUSH / FOAM BRUSH</strong>, then brush car generously with soap.</p>
                         </div>
                     </div>
                     <div class="instruction-step">
@@ -103,8 +104,8 @@
                     <div class="instruction-step">
                         <span class="step-number">5</span>
                         <div class="step-content">
-                            <h3>WAX - Avoid Windows</h3>
-                            <p>Turn dial to <strong>WAX</strong>. Use wand, <strong>avoid windows</strong>.</p>
+                            <h3>WAX</h3>
+                            <p>Turn dial to <strong>WAX</strong>. Use wand to apply protective wax coating.</p>
                         </div>
                     </div>
                 </div>
@@ -121,8 +122,8 @@
                             <li>$12 = 14 minutes</li>
                             <li>$13 = 16 minutes</li>
                         </ul>
-                        <p class="minimum-note"><strong>Minimum: $8</strong></p>
-                        <p class="restart-note">If machine shuts off, it requires 6 tokens to restart</p>
+                        <p class="minimum-note"><strong>Minimum: $8 (8 tokens)</strong></p>
+                        <p class="restart-note">If machine shuts off, it requires 8 tokens to restart</p>
                         <div class="add-time-info">
                             <strong>⏱️ Need More Time?</strong>
                             <p>When beep goes off, add additional tokens. Each token gives you 2 more minutes.</p>
@@ -157,6 +158,75 @@
             <!-- Facility Image Showcase -->
             <div class="facility-image-container">
                 <img src="images/entrance.jpg" alt="Bubble Brush Car Wash Entrance" class="facility-entrance-image">
+            </div>
+        </div>
+    </section>
+
+    <!-- Products Section -->
+    <section class="products-section" id="products">
+        <div class="container">
+            <div class="products-header">
+                <span class="products-badge">🛒 SHOP WITH US</span>
+                <h2 class="products-title">Products & Vending Machines</h2>
+                <p class="products-subtitle">Everything you need for a premium car care experience</p>
+            </div>
+
+            <!-- Vending Machines -->
+            <div class="products-subsection">
+                <h3 class="subsection-title">🏪 Our Vending Machines</h3>
+                <p class="subsection-description">Convenient on-site vending for all your car care needs</p>
+                <div class="vending-grid">
+                    <div class="vending-item">
+                        <div class="vending-placeholder">
+                            <span class="placeholder-icon">📷</span>
+                            <p>Vending Machine 1</p>
+                        </div>
+                    </div>
+                    <div class="vending-item">
+                        <div class="vending-placeholder">
+                            <span class="placeholder-icon">📷</span>
+                            <p>Vending Machine 2</p>
+                        </div>
+                    </div>
+                    <div class="vending-item">
+                        <div class="vending-placeholder">
+                            <span class="placeholder-icon">📷</span>
+                            <p>Vending Machine 3</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Simoniz Products -->
+            <div class="products-subsection">
+                <h3 class="subsection-title">✨ Premium SIMONIZ Products We Use</h3>
+                <p class="subsection-description">Professional-grade cleaning solutions for the best results</p>
+                <div class="products-grid">
+                    <div class="product-item">
+                        <div class="product-placeholder">
+                            <span class="placeholder-icon">🧴</span>
+                            <p>SIMONIZ Soap</p>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <div class="product-placeholder">
+                            <span class="placeholder-icon">🧴</span>
+                            <p>SIMONIZ Wax</p>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <div class="product-placeholder">
+                            <span class="placeholder-icon">🧴</span>
+                            <p>SIMONIZ Foam Brush</p>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <div class="product-placeholder">
+                            <span class="placeholder-icon">🧴</span>
+                            <p>SIMONIZ Tire Cleaner</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -281,6 +351,7 @@
             <div class="section-header">
                 <h2 class="section-title">Token-Based Pricing</h2>
                 <p class="section-subtitle">Simple and affordable - pay with tokens only</p>
+                <div class="cash-only-banner">💵 CASH ONLY - NO CARD ACCEPTED 💵</div>
             </div>
             <div class="pricing-grid">
                 <div class="pricing-card featured">
@@ -334,7 +405,7 @@
                     <div class="info-icon">📍</div>
                     <h3>Find Us</h3>
                     <p><strong>Bubble Brush Car Wash</strong><br>
-                    6 Lincoln Ave<br>
+                    6 Lincoln Ave (corner of Bay Shore Rd)<br>
                     Deer Park, NY</p>
                     <p style="margin-top: 1rem; font-size: 0.9rem; color: #64748b;">Easy access from main highway</p>
                 </div>
@@ -354,7 +425,6 @@
                     Token-Based System<br>
                     $1 = 1 Token<br>
                     Minimum: 6 Tokens ($8)</p>
-                    <p style="margin-top: 1rem; font-size: 0.9rem; color: #64748b;">💵 Cash Only</p>
                     <p style="margin-top: 0.75rem; font-size: 0.85rem; color: #991b1b; font-weight: 600;">⏱️ When machine beeps you have one minute left + you can add additional tokens for more time. If the machine turns off, add 8 more tokens.</p>
                 </div>
             </div>
